--- a/kube-api/pom.xml
+++ b/kube-api/pom.xml
@@ -52,6 +52,17 @@
             <artifactId>hutool-all</artifactId>
             <version>5.7.20</version>
         </dependency>
+
+        <!--自定义注解@Aspect的依赖 -->
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjrt</artifactId>
+            <version>1.9.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
