--- a/kube-api/src/main/resources/application.yml
+++ b/kube-api/src/main/resources/application.yml
@@ -12,3 +12,14 @@ kube:
 #      password: Dajie123!@#
 #      connection-timeout: 2000
 #      read-timeout: 2000
+app:
+  id: zzzyy
+apollo:
+  cluster: default
+  meta: http://172.16.244.134:8081 #Apollo Meta Server 地址
+  cacheDir: /Users/zhuyq/var/apollo
+  bootstrap:
+    enabled: true   #是否开启 Apollo 配置预加载功能。默认为 false。
+    eagerLoad:
+      enable: true  #是否开启 Apollo 支持日志级别的加载时机。默认为 false。
+    namespaces: application
