--- a/kube-api/pom.xml
+++ b/kube-api/pom.xml
@@ -77,6 +77,12 @@
             <artifactId>fastjson2</artifactId>
             <version>2.0.26</version>
         </dependency>
+        <!--使用redisson作为分布式锁-->
+        <dependency>
+            <groupId>org.redisson</groupId>
+            <artifactId>redisson</artifactId>
+            <version>3.16.8</version>
+        </dependency>
     </dependencies>
 
     <build>
