--- a/kube-api/src/main/resources/application.yml
+++ b/kube-api/src/main/resources/application.yml
@@ -4,14 +4,14 @@ server:
 kube:
   msg: hello kube
 
-spring:
-  elasticsearch:
-    rest:
-      uris: 10.12.100.57:9200,10.12.100.58:9200,10.12.100.59:9200
-      username: meishiyi
-      password: Dajie123!@#
-      connection-timeout: 2000
-      read-timeout: 2000
+#spring:
+#  elasticsearch:
+#    rest:
+#      uris: 10.12.100.53:9200,10.12.100.52:9200,10.12.100.51:9200
+#      username: huolieniao
+#      password: huolie123!@#
+#      connection-timeout: 2000
+#      read-timeout: 2000
 #app:
 #  id: zzzyy
 #apollo:
